Adding first HTML page with Hello World message.

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,6 +5,6 @@
     <title>Hello World</title>
 </head>
 <body>
-Hello world from Ben Cebrat! This is my first HTML page.
+Hello world from Ben Cebrat! This is my first HTML page. (second try)
 </body>
 </html>
